adding blog components

--- a/src/app/lemon/lemon.component.html
+++ b/src/app/lemon/lemon.component.html
@@ -1,16 +1,6 @@
 <div>
     <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Sravya Dasari</a>
-                </div>
-                <!-- <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-      
-            </ul> -->
-            </div>
-        </nav>
+        <app-navbar></app-navbar>
         <div class="text-center">
             <img src="../../assets/images/lemonoscover.png" class="avatar img-fluid">
             <h3>LemonOS: Where Time Meets Innovation 🍋⌚</h3>
