--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,6 @@
 <div>
     <div class="container">
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Sravya Dasari</a>
-                </div>
-                <!-- <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-      
-            </ul> -->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://open.spotify.com/playlist/4jI7tL55EU1aNilC8eXTWE?si=e15712ac1bf44588">Listen to my playlist</a></li>
-              </ul>
-            </div>
-        </nav>
+        <app-navbar></app-navbar>
         <div class="text-center">
             <img src="../assets/images/sd.png" class="avatar img-fluid">
             <h3>Hello, I'm Sravya Dasari</h3>
