fix: add privacy policy and blog post

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,6 +13,24 @@
             <div class="row">
                 <!-- Left side with text -->
                 <div class="col-md-6 d-flex justify">
+                    <div class="project-title">PosturAir</div>
+                    <div class="project-timeline">March 2025</div>
+                    <div class="project-description"> PosturAir is a posture correction software that uses AI and Airpods Pro to detect and correct your posture.
+                        Ever feel like your posture could use a little boost? PosturAir is here to help! Using the smart sensors in your AirPods Pro and the power of AI, it gently nudges you whenever you start to slouch.
+                    </div>
+                        <div class="action-link" routerLink="/posturair"> Read More </div>
+                </div>
+
+                <!-- Right side with image -->
+                <div class="col-md-6 ">
+                    <div class="project-image">
+                        <img src="../assets/images/posturair.jpg" width="200px" alt="Cover Image">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- Left side with text -->
+                <div class="col-md-6 d-flex justify">
                     <div class="project-title">LemonOS</div>
                     <div class="project-timeline">April 2023</div>
                     <div class="project-description"> LemonOS: Where Time Meets Innovation 🍋⌚
@@ -45,10 +63,10 @@
                 <!-- Right side with image -->
                 <div class="col-md-6 ">
                     <div class="project-image">
-                        <img src="https://lh3.googleusercontent.com/p/AF1QipNJjTiHD1QTaU9bCSh1t_Ua8tKy-RH-ujgoE68q=s1360-w1360-h1020"
+                        <img src="../assets/images/integra.png"
                             width="100px" alt="Cover Image">
                         <h1 class="and">+</h1>
-                        <img src="https://egen.solutions/assets/images/logo/svg/egen-dark.svg" width="100px"
+                        <img src="../assets/images/egen.png" width="100px"
                             alt="Cover Image">
 
                     </div>
