--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="container" style="margin-top: 5em;">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row project-block">
                 <!-- Left side with text -->
                 <div class="col-md-6 d-flex justify">
                     <div class="project-title">PosturAir</div>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row project-block">
                 <!-- Left side with text -->
                 <div class="col-md-6 d-flex justify">
                     <div class="project-title">LemonOS</div>
