--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,6 +5,7 @@
         </div>
         <ul class="nav navbar-nav">
       <li ><a #rla0="routerLinkActive" active="rla0.isActive" routerLink="blog" routerLinkActive="active">Blog</a></li>
+      <li ><a class="resume-link" (click)="downloadResume()" role="button">Resume</a></li>
 
     </ul>
     <ul class="nav navbar-nav navbar-right">
